syntax = "proto3";

package org.tomasmo.plurpy.v1.room;

// Works only with the logged in account context
service RoomsService {

  // Creates a room and returns it
  rpc Create(CreateRequest) returns (CreateResponse) {}
}

message CreateRequest {
}

message CreateResponse {
}